...
    <string name="menu_aggiungi_corso">Aggiungi Corso</string>
    <string name="nome_drower">nome</string>
    <string name="email_drower">email</string>
    <string name="desc_profilo">Immagine profilo</string>

    <!-- stringhe per la CorsoDocenteActivity -->
    <string name="menu_post">Post</string>
    <string name="desc_icona">Icona contenuto</string>
    <string name="menu_visualizza_studenti_iscritti">Visualizza Studenti iscritti</string>
    <string name="menu_visualizza_richieste_studente">Visualizza Richieste Studenti</string>

    <!-- stringhe per la CorsoStudenteActivity -->
    <string name="menu_cancellazione_dal_corso">Abbandona il Corso</string>
    <string name="Dialog_titolo_conferma_cancellazione">Sei sicuro di voler abbandonare il corso?</string>
    <string name="Dialog_descrizione_conferma_cancellazione">Cosi facendo perderai tutti i dati relativi al corso</string>
    <string name="Dialog_button_si_conferma_cancellazione">Si</string>
    <string name="Dialog_button_no_conferma_cancellazione">No</string>
    <string name="Dialog_titolo_corretta_cancellazione">La cancellazione è avvenuta con successo</string>
    <string name="Dialog_titolo_incorretta_cancellazione">La cancellazione non è avvenuta con successo, riprova</string>
    <string name="Dialog_button_ok_cancellazione">OK</string>




    <!-- stringhe per la InfoDocenteActivity -->
    <string name="nome_studente_text">Nome</string>
...
    <string name="matricol_studente_text">Matricola</string>
    <string name="invia_email_button">Invia Email</string>

    <!-- stringhe per la LogStudenteActivity -->
    <string name="menu_iscrizione_corso">Iscrizione ad un Corso</string>
    <string name="matricola_drower">matricola</string>
    <string name="logout">Logout</string>


    <!-- stringhe per la RichiestaIscrizioneActivity -->
    <string name="iscriviti_a_un_corso">Iscriviti a un corso</string>
    <string name="chiedi_al_docente_il_codice">Chiedi al docente il codice del corso e inseriscilo qui</string>
    <string name="Codice_Corso_text">Codice Corso</string>
...
    <!-- stringhe per il PostActivity-->
    <string name="Numero_commenti">Commenti</string>
    <string name="no_activity">Nessun Web Browser trovato</string>
    <string name="download_webBrowser">Per favore, scarica un web browser.</string>
    <string name="upload_post_error">Errore nel caricamento del nuovo post.</string>
    <string name="aggiungi_commento">Commenta</string>
    <string name="formato_data">dd/MM/yyyy HH:mm</string>
    <string name="titolo">File Download</string>
    <string name="modifica_button">Modifica</string>
    <string name="desc_invio">Icona invio</string>
    <string name="desc_indietro">icona indietro</string>
    <string name="risposte">Risposte</string>

...
